<b>Version 2.0.0 Beta 2:</b><br/><br/>
    &#8226; Fixed themes being reset<br/>
    &#8226; Only show custom background on main timelines or it gets distorted<br/>
    &#8226; Force closes<br/>
    &#8226; Audio stopping when viewing web page from tweet viewer<br/>
</br><br/>

<b>Version 2.0.0 Beta 1:</b><br/><br/>
<b>NEW:</b><br/>
    &#8226; Talon Pull will automatically shut down to preserve battery when no data connection is active, then restart and check your timeline for missed tweets when data becomes available again.<br/>
    &#8226; Compose button can now float over the main timelines instead of being in the action bar<br/>
    &#8226; New Discover tab in the drawer for trends, suggested users, and nearby tweets<br/>
    &#8226; Pictures page on a users profile<br/>
    &#8226; Animations for opening new pages and windows<br/>
    &#8226; Post tweets from different accounts in the compose window<br/>
    &#8226; Notifications button in the action bar for Talon Pull interations<br/>
    &#8226; Unread "bar" widget<br/>
    &#8226; Seperated the DashClock settings from the notification settings<br/>
    &#8226; Widget themed differently<br/>
    &#8226; Two new transparent widget themes<br/>
    &#8226; Added time ago to the widget items<br/>
    &#8226; Mute expressions and keywords on tweets<br/>
    &#8226; View up to 100 retweeters of a status (API limit)<br/>
    &#8226; View users mentions and favorites on their profiles<br/>
    &#8226; Favorite user tweet notifications will now open directly to the tweet<br/>
    &#8226; Added option to manually select location for local trends<br/>
    &#8226; Saved Searches drawer item<br/>
    &#8226; Save and destroy saved searches<br/>
    &#8226; Added picture filter to searches<br/>
    &#8226; Added retweet filter to searches<br/>
    &#8226; Auto-complete users from the tweet reply<br/>
    &#8226; RTL support for Android 4.2 and above<br/>
    &#8226; Themers can now theme the action bar<br/>